--- a/colors-and-type.html
+++ b/colors-and-type.html
@@ -16,7 +16,7 @@
     <title>Toxin - типографика!</title>
   </head>
   <body class="colors-and-type">
-    <div class="logo logo--big">
+    <div class="logo logo_big">
       <div class="logo__big-pict"></div>
     </div>
     <div class="container">
@@ -112,23 +112,23 @@
           <li>
             <section class="typograph">
               <div class="typograph__wrap">
-                <p class="typograph__label  typograph__label--h2">H2</p>
-                <h2 class="typograph__title  typograph__title--h2">Next one is the item title inside widgets</h2>
+                <p class="typograph__label  typograph__label_h2">H2</p>
+                <h2 class="typograph__title  typograph__title_h2">Next one is the item title inside widgets</h2>
               </div>
             </section>
           </li>
           <li>
             <section class="typograph">
               <div class="typograph__wrap">
-                <p class="typograph__label  typograph__label--h3">H3</p>
-                <h2 class="typograph__title  typograph__title--h3">This is a label or CTA text</h2>
+                <p class="typograph__label  typograph__label_h3">H3</p>
+                <h2 class="typograph__title  typograph__title_h3">This is a label or CTA text</h2>
               </div>
             </section>
           </li>
           <li>
             <section class="typograph">
               <div class="typograph__wrap">
-                <p class="typograph__label  typograph__label--text">Body</p>
+                <p class="typograph__label  typograph__label_text">Body</p>
                 <p class="typograph__text">This is the body text which is used for most of the design, like paragraphs, lists, etc.</p>
               </div>
             </section>
