--- a/form-elements.html
+++ b/form-elements.html
@@ -16,59 +16,59 @@
     <title>Toxin - элементы форм</title>
   </head>
   <body class="form-elements">
-    <div class="logo logo--big">
+    <div class="logo logo_big">
       <div class="logo__big-pict"></div>
     </div>
     <div class="container">
       <div class="form-elements__wrap">
         <div class="form-elements__row">
           <div class="form-elements__inputs">
-            <div class="input-group  input-group--column">
-              <label class="input-group__label  input-group__label--big" for="textField">Text field</label>
+            <div class="input-group  input-group_with-label">
+              <label class="input-group__label  input-group__label_big" for="textField">Text field</label>
               <p class="input-group__descr">Default</p>
               <input class="input-group__input" id="textField" type="text" placeholder="Email"/>
             </div>
-            <div class="input-group  input-group--column">
-              <label class="input-group__label  input-group__label--big" for="textFieldHover">Text field</label>
+            <div class="input-group  input-group_with-label">
+              <label class="input-group__label  input-group__label_big" for="textFieldHover">Text field</label>
               <p class="input-group__descr">Hover / Focus</p>
-              <input class="input-group__input  input-group__input--hover" id="textFieldHover" type="text" placeholder="This is pretty awesome"/>
+              <input class="input-group__input  input-group__input_hovered" id="textFieldHover" type="text" placeholder="This is pretty awesome"/>
             </div>
-            <div class="input-group  input-group--column">
-              <p class="input-group__label  input-group__label--big" id="for-number-guests-input">Dropdown</p>
+            <div class="input-group  input-group_with-label">
+              <p class="input-group__label  input-group__label_big" id="for-number-guests-input">Dropdown</p>
               <p class="input-group__descr">Default</p>
-              <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-guests-input">Сколько гостей</div>
+              <div class="input-group__input  input-group__input_fake  input-group__input_with-icon  input-group__button-split_down-animation" id="number-guests-input">Сколько гостей</div>
             </div>
-            <div class="input-group  input-group--column">
-              <label class="input-group__label  input-group__label--big" for="maskedTextField">Masked text field</label>
+            <div class="input-group  input-group_with-label">
+              <label class="input-group__label  input-group__label_big" for="maskedTextField">Masked text field</label>
               <p class="input-group__descr">Default</p>
               <input class="input-group__input" id="maskedTextField" type="text" placeholder="ДД.ММ.ГГГГ"/>
             </div>
             <div class="form-elements__inputs-column">
-              <div class="input-group  input-group--column">
-                <label class="input-group__label  input-group__label--big" for="arrival-input">Date Dropdown</label>
+              <div class="input-group  input-group_with-label">
+                <label class="input-group__label  input-group__label_big" for="arrival-input">Date Dropdown</label>
                 <p class="input-group__split">
-                  <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-input" placeholder="ДД.ММ.ГГГГ"/>
-                  <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
+                  <input class="input-group__input  input-group__input_double-button  input-group__input_dark-placeholder" id="arrival-input" placeholder="ДД.ММ.ГГГГ"/>
+                  <button class="input-group__button-split  input-group__button-split_down-animation" id="arrival-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                 </p>
               </div>
-              <div class="input-group  input-group--column">
-                <label class="input-group__label  input-group__label--big" for="departure-input">Date Dropdown</label>
+              <div class="input-group  input-group_with-label">
+                <label class="input-group__label  input-group__label_big" for="departure-input">Date Dropdown</label>
                 <p class="input-group__split">
-                  <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-input" placeholder="19.08.2019"/>
-                  <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
+                  <input class="input-group__input  input-group__input_double-button  input-group__input_dark-placeholder" id="departure-input" placeholder="19.08.2019"/>
+                  <button class="input-group__button-split  input-group__button-split_down-animation" id="departure-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                 </p>
               </div>
             </div>
             <div class="form-elements__inputs-small">
-              <div class="input-group  input-group--column">
-                <p class="input-group__label  input-group__label--big" id="for-filterDateDropdown">Filter date dropdown</p>
-                <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="filterDateDropdown">19 авг - 23 авг</div>
+              <div class="input-group  input-group_with-label">
+                <p class="input-group__label  input-group__label_big" id="for-filterDateDropdown">Filter date dropdown</p>
+                <div class="input-group__input  input-group__input_fake  input-group__input_with-icon  input-group__button-split_down-animation" id="filterDateDropdown">19 авг - 23 авг</div>
               </div>
-              <div class="input-group  input-group--column">
-                <label class="input-group__label  input-group__label--big" for="input-id">Subscription text field</label>
+              <div class="input-group  input-group_with-label">
+                <label class="input-group__label  input-group__label_big" for="input-id">Subscription text field</label>
                 <p class="input-group__split">
-                  <input class="input-group__input  input-group__input--button-split" id="input-id" type="email" placeholder="Email"/>
-                  <button class="input-group__button-split  input-group__button-split--right-animation" id="split-btn-id" type="button"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
+                  <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Email"/>
+                  <button class="input-group__button-split  input-group__button-split_right-animation" id="split-btn-id" type="button"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
                 </p>
               </div>
             </div>
@@ -121,7 +121,7 @@
               <p class="likebtn__item">
                 <button type="button">2</button>
               </p>
-              <p class="likebtn__item  likebtn__item--active">
+              <p class="likebtn__item  likebtn__item_active">
                 <button type="button">12</button>
               </p>
             </div>
@@ -170,25 +170,25 @@
               <p class="title">Buttons</p>
               <div class="form-elements__full-button">
                 <button class="button" type="button">Click me</button>
-                <button class="button  button--disable" type="button" disabled="disabled">Click me</button>
+                <button class="button  button_disabled" type="button" disabled="disabled">Click me</button>
               </div>
               <div class="form-elements__empty-button">
-                <button class="button  button--empty-style" type="button">Click me</button>
-                <button class="button  button--empty-style  button--empty-disable" type="button" disabled="disabled">Click me</button>
+                <button class="button  button_empty" type="button">Click me</button>
+                <button class="button  button_empty  button_empty-disabled" type="button" disabled="disabled">Click me</button>
               </div>
               <div class="form-elements__links">
-                <button class="button  button--only-text" type="button">Click me</button>
-                <button class="button  button--only-text  button--only-text-disable" type="button" disabled="disabled">Click me</button>
+                <button class="button  button_only-text" type="button">Click me</button>
+                <button class="button  button_only-text  button_only-text-disabled" type="button" disabled="disabled">Click me</button>
               </div>
               <div class="form-elements__submit-btn">
-                <button class="button  button--icon" type="submit">Перейти к оплате</button>
+                <button class="button  button_with-icon" type="submit">Перейти к оплате</button>
               </div>
             </div>
             <div class="pagination">
               <div class="pagination__wrap">
                 <p class="pagination__title">Pagination</p>
                 <ul class="pagination__pages">
-                  <li class="pagination__page-item  pagination__page-item--active"><a href="/404.html">1</a></li>
+                  <li class="pagination__page-item  pagination__page-item_active"><a href="/404.html">1</a></li>
                   <li class="pagination__page-item"><a href="/404.html">2</a></li>
                   <li class="pagination__page-item"><a href="/404.html">3</a></li>
                   <li class="pagination__page-item"><a href="/404.html">...</a></li>
@@ -204,27 +204,27 @@
         </div>
         <div class="form-elements__row">
           <div class="form-elements__drop-down-expand">
-            <div class="input-group  input-group--column">
-              <p class="input-group__label  input-group__label--big" id="for-number-guests-input1">Dropdown</p>
+            <div class="input-group  input-group_with-label">
+              <p class="input-group__label  input-group__label_big" id="for-number-guests-input1">Dropdown</p>
               <p class="input-group__descr">Default</p>
-              <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-guests-input1">2 спальни, 2 кровати...</div>
+              <div class="input-group__input  input-group__input_fake  input-group__input_with-icon  input-group__button-split_down-animation" id="number-guests-input1">2 спальни, 2 кровати...</div>
             </div>
-            <div class="input-group  input-group--column">
-              <p class="input-group__label  input-group__label--big" id="for-number-guests-input2">Dropdown</p>
+            <div class="input-group  input-group_with-label">
+              <p class="input-group__label  input-group__label_big" id="for-number-guests-input2">Dropdown</p>
               <p class="input-group__descr">Expanded</p>
-              <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-guests-input2">2 спальни, 2 кровати...</div>
+              <div class="input-group__input  input-group__input_fake  input-group__input_with-icon  input-group__button-split_down-animation" id="number-guests-input2">2 спальни, 2 кровати...</div>
             </div>
             <div class="drop-down-container" id="drop-down-container"></div>
             <div class="form-elements__exp-checkbox-close">
               <div class="checkbox">
-                <p class="checkbox__title  checkbox__title--expandable">
+                <p class="checkbox__title  checkbox__title_expandabled">
                   <button class="checkbox__expandable" id="first-expandable-btn" type="button">Expandable checkbox list</button>
                 </p>
               </div>
             </div>
             <div class="form-elements__exp-checkbox-open">
               <div class="checkbox">
-                <p class="checkbox__title  checkbox__title--expandable  checkbox__title--expandable-open">
+                <p class="checkbox__title  checkbox__title_expandabled  checkbox__title_expandabled-open">
                   <button class="checkbox__expandable" id="second-expandable-btn" type="button">Expandable checkbox list</button>
                 </p>
                 <div class="checkbox__item-list" id="expandable-list">
@@ -273,23 +273,23 @@
             </div>
           </div>
           <div class="form-elements__drop-down-rich">
-            <div class="input-group  input-group--column">
-              <p class="input-group__label  input-group__label--big" id="for-number-guests-input3">Dropdown</p>
-              <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-guests-input3">Сколько гостей</div>
+            <div class="input-group  input-group_with-label">
+              <p class="input-group__label  input-group__label_big" id="for-number-guests-input3">Dropdown</p>
+              <div class="input-group__input  input-group__input_fake  input-group__input_with-icon  input-group__button-split_down-animation" id="number-guests-input3">Сколько гостей</div>
             </div>
             <div class="drop-down-container" id="drop-down-container2"></div>
             <div class="form-elements__bunny-hop">
-              <div class="checkbox  checkbox--rich">
+              <div class="checkbox  checkbox_rich">
                 <p class="checkbox__title">Rich Checkbox Buttons</p>
                 <div class="checkbox__item-list" id="1-rich-checkbox-list">
                   <div class="checkbox__item">
                     <input id="wild" type="checkbox"/>
-                    <label class="checbox__lbl  checbox__lbl--rich" for="wild">Широкий коридор<span class="checkbox__descr">Ширина коридоров в номере не менее 91 см.</span>
+                    <label class="checbox__lbl  checbox__lbl_rich" for="wild">Широкий коридор<span class="checkbox__descr">Ширина коридоров в номере не менее 91 см.</span>
                     </label>
                   </div>
                   <div class="checkbox__item">
                     <input id="help" type="checkbox"/>
-                    <label class="checbox__lbl  checbox__lbl--rich" for="help">Помощник для инвалидов<span class="checkbox__descr">На 1 этаже вас встретит специалист  и проводит до номера.</span>
+                    <label class="checbox__lbl  checbox__lbl_rich" for="help">Помощник для инвалидов<span class="checkbox__descr">На 1 этаже вас встретит специалист  и проводит до номера.</span>
                     </label>
                   </div>
                 </div>
@@ -297,9 +297,9 @@
             </div>
           </div>
           <div class="form-elements__drop-down-bullet">
-            <div class="input-group  input-group--column">
-              <p class="input-group__label  input-group__label--big" id="for-number-guests-input4">Dropdown</p>
-              <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-guests-input4">Сколько гостей</div>
+            <div class="input-group  input-group_with-label">
+              <p class="input-group__label  input-group__label_big" id="for-number-guests-input4">Dropdown</p>
+              <div class="input-group__input  input-group__input_fake  input-group__input_with-icon  input-group__button-split_down-animation" id="number-guests-input4">Сколько гостей</div>
             </div>
             <div class="drop-down-container" id="drop-down-container3"></div>
             <div class="form-elements__bunny-hop">
@@ -338,7 +338,7 @@
               <div class="comment__wrap">
                 <div class="comment__pict"><img src="img/murad-5e1e291.png" alt="Мурад Сарафанов"/></div>
                 <div class="likebtn">
-                  <p class="likebtn__item  likebtn__item--active">
+                  <p class="likebtn__item  likebtn__item_active">
                     <button type="button">12</button>
                   </p>
                 </div>
