--- a/headers-and-footers.html
+++ b/headers-and-footers.html
@@ -16,7 +16,7 @@
     <title>Toxin - шапки и подвалы!</title>
   </head>
   <body class="headers-and-footers">
-    <div class="logo logo--big">
+    <div class="logo logo_big">
       <div class="logo__big-pict"></div>
     </div>
     <div class="headers-and-footers__wrap">
@@ -57,11 +57,11 @@
                 <div class="main-menu__burger-icon" id="firstBurgerBtn"><span></span><span></span><span></span></div>
                 <nav>
                   <ul class="main-menu__list">
-                    <li class="main-menu__item  main-menu__item--active"><a>Home</a>
+                    <li class="main-menu__item  main-menu__item_active"><a>Home</a>
                     </li>
                     <li class="main-menu__item"><a href="/404.html">About us</a>
                     </li>
-                    <li class="main-menu__item  main-menu__item--sub-menu"><a href="/404.html">Services</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a href="/404.html">Services</a>
                       <ul class="main-menu__sub-menu">
                         <li class="main-menu__sub-item"><a href="/404.html">service</a></li>
                       </ul>
@@ -75,7 +75,7 @@
                   </ul>
                 </nav>
               </div>
-              <section class="page-header__auth"><a class="button  button--empty-style" href="/auth.html">Login</a><a class="button" href="/registration.html">Register</a>
+              <section class="page-header__auth"><a class="button  button_empty" href="/auth.html">Login</a><a class="button" href="/registration.html">Register</a>
                 <ul class="page-header__auth-list" id="firstAuthList">
                   <li class="page-header__auth-item"><a href="/auth.html">Login</a></li>
                   <li class="page-header__auth-item"><a href="/registration.html">Register</a></li>
@@ -86,7 +86,7 @@
           </div>
         </header>
       </div>
-      <div class="headers-and-footers__item  headers-and-footers__item--diff-header">
+      <div class="headers-and-footers__item  headers-and-footers__item_authorized">
         <header class="page-header">
           <div class="container">
             <div class="page-header__wrap">
@@ -123,11 +123,11 @@
                 <div class="main-menu__burger-icon" id="secondBurgerBtn"><span></span><span></span><span></span></div>
                 <nav>
                   <ul class="main-menu__list">
-                    <li class="main-menu__item  main-menu__item--active"><a>Home</a>
+                    <li class="main-menu__item  main-menu__item_active"><a>Home</a>
                     </li>
                     <li class="main-menu__item"><a href="/404.html">About us</a>
                     </li>
-                    <li class="main-menu__item  main-menu__item--sub-menu"><a href="/404.html">Services</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a href="/404.html">Services</a>
                       <ul class="main-menu__sub-menu">
                         <li class="main-menu__sub-item"><a href="/404.html">service</a></li>
                       </ul>
@@ -141,7 +141,7 @@
                   </ul>
                 </nav>
               </div>
-              <section class="page-header__auth  page-header__auth--is-auth">
+              <section class="page-header__auth  page-header__auth_authenticated">
                 <p class="page-header__user-name">Cosmin Negoita</p>
               </section>
             </div>
@@ -153,7 +153,7 @@
           <div class="container">
             <div class="page-footer__wrap">
               <div class="page-footer__content">
-                <div class="page-footer__col  page-footer__col--large">
+                <div class="page-footer__col  page-footer__col_large">
                   <div class="logo"><a class="logo__link" href="/">
                       <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g display="block"> 
@@ -228,7 +228,7 @@
                       </div>
                     </section>
                   </div>
-                  <div class="page-footer__col  page-footer__col--large">
+                  <div class="page-footer__col  page-footer__col_large">
                     <section class="text-content">
                       <div class="text-content__wrap">
                         <h2 class="text-content__title">Subscribe to our newsletter</h2>
@@ -238,8 +238,8 @@
                     <form action="/404.html">
                       <div class="input-group">
                         <p class="input-group__split">
-                          <input class="input-group__input  input-group__input--button-split" id="input-id" type="email" placeholder="Your email address"/>
-                          <button class="input-group__button-split  input-group__button-split--right-animation" id="footer-email-split-id" type="submit"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
+                          <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Your email address"/>
+                          <button class="input-group__button-split  input-group__button-split_right-animation" id="footer-email-split-id" type="submit"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
                         </p>
                       </div>
                     </form>
@@ -272,9 +272,9 @@
         </footer>
       </div>
       <div class="headers-and-footers__item">
-        <footer class="page-footer  page-footer--short">
+        <footer class="page-footer  page-footer_short">
           <div class="container">
-            <div class="page-footer__wrap  page-footer__wrap--short">
+            <div class="page-footer__wrap  page-footer__wrap_short">
               <div class="logo"><a class="logo__link" href="/">
                   <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g display="block"> 
