--- a/registration.html
+++ b/registration.html
@@ -56,7 +56,7 @@
                   <ul class="main-menu__list">
                     <li class="main-menu__item"><a href="/404.html">О нас</a>
                     </li>
-                    <li class="main-menu__item  main-menu__item--sub-menu"><a href="/404.html">Услуги</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a href="/404.html">Услуги</a>
                       <ul class="main-menu__sub-menu">
                         <li class="main-menu__sub-item"><a href="/404.html">Подбор отелей</a></li>
                         <li class="main-menu__sub-item"><a href="/404.html">Заказать трансфер</a></li>
@@ -67,7 +67,7 @@
                     </li>
                     <li class="main-menu__item"><a href="/404.html">Новости</a>
                     </li>
-                    <li class="main-menu__item  main-menu__item--sub-menu"><a href="/404.html">Соглашения</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a href="/404.html">Соглашения</a>
                       <ul class="main-menu__sub-menu">
                         <li class="main-menu__sub-item"><a href="/404.html">Пользовательские</a></li>
                         <li class="main-menu__sub-item"><a href="/404.html">Международные</a></li>
@@ -76,7 +76,7 @@
                   </ul>
                 </nav>
               </div>
-              <section class="page-header__auth"><a class="button  button--empty-style" href="/auth.html">Войти</a><a class="button" href="/registration.html">Зарегистрироваться</a>
+              <section class="page-header__auth"><a class="button  button_empty" href="/auth.html">Войти</a><a class="button" href="/registration.html">Зарегистрироваться</a>
                 <ul class="page-header__auth-list" id="authListId">
                   <li class="page-header__auth-item"><a href="/auth.html">Войти</a></li>
                   <li class="page-header__auth-item"><a href="/registration.html">Зарегистрироваться</a></li>
@@ -132,10 +132,10 @@
                         </p>
                       </div>
                     </fieldset>
-                    <button class="button  button--icon" type="submit">Перейти к оплате</button>
+                    <button class="button  button_with-icon" type="submit">Перейти к оплате</button>
                   </form>
                   <div class="register-card__account-enter">
-                    <p>Уже есть аккаунт на Toxin</p><a class="button  button--empty-style" href="/auth.html">Войти</a>
+                    <p>Уже есть аккаунт на Toxin</p><a class="button  button_empty" href="/auth.html">Войти</a>
                   </div>
                 </div>
               </div>
@@ -147,7 +147,7 @@
         <div class="container">
           <div class="page-footer__wrap">
             <div class="page-footer__content">
-              <div class="page-footer__col  page-footer__col--large">
+              <div class="page-footer__col  page-footer__col_large">
                 <div class="logo"><a class="logo__link" href="/">
                     <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <g display="block"> 
@@ -222,7 +222,7 @@
                     </div>
                   </section>
                 </div>
-                <div class="page-footer__col  page-footer__col--large">
+                <div class="page-footer__col  page-footer__col_large">
                   <section class="text-content">
                     <div class="text-content__wrap">
                       <h2 class="text-content__title">Подписка</h2>
@@ -232,8 +232,8 @@
                   <form action="/404.html">
                     <div class="input-group">
                       <p class="input-group__split">
-                        <input class="input-group__input  input-group__input--button-split" id="input-id" type="email" placeholder="Email"/>
-                        <button class="input-group__button-split  input-group__button-split--right-animation" id="footer-email-split-id" type="submit"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
+                        <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Email"/>
+                        <button class="input-group__button-split  input-group__button-split_right-animation" id="footer-email-split-id" type="submit"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
                       </p>
                     </div>
                   </form>
