--- a/room-details.html
+++ b/room-details.html
@@ -56,7 +56,7 @@
                   <ul class="main-menu__list">
                     <li class="main-menu__item"><a href="/404.html">О нас</a>
                     </li>
-                    <li class="main-menu__item  main-menu__item--sub-menu"><a href="/404.html">Услуги</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a href="/404.html">Услуги</a>
                       <ul class="main-menu__sub-menu">
                         <li class="main-menu__sub-item"><a href="/404.html">Подбор отелей</a></li>
                         <li class="main-menu__sub-item"><a href="/404.html">Заказать трансфер</a></li>
@@ -67,7 +67,7 @@
                     </li>
                     <li class="main-menu__item"><a href="/404.html">Новости</a>
                     </li>
-                    <li class="main-menu__item  main-menu__item--sub-menu"><a href="/404.html">Соглашения</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a href="/404.html">Соглашения</a>
                       <ul class="main-menu__sub-menu">
                         <li class="main-menu__sub-item"><a href="/404.html">Пользовательские</a></li>
                         <li class="main-menu__sub-item"><a href="/404.html">Международные</a></li>
@@ -76,7 +76,7 @@
                   </ul>
                 </nav>
               </div>
-              <section class="page-header__auth"><a class="button  button--empty-style" href="/auth.html">Войти</a><a class="button" href="/registration.html">Зарегистрироваться</a>
+              <section class="page-header__auth"><a class="button  button_empty" href="/auth.html">Войти</a><a class="button" href="/registration.html">Зарегистрироваться</a>
                 <ul class="page-header__auth-list" id="authListId">
                   <li class="page-header__auth-item"><a href="/auth.html">Войти</a></li>
                   <li class="page-header__auth-item"><a href="/registration.html">Зарегистрироваться</a></li>
@@ -130,21 +130,21 @@
                         </div>
                         <p class="pie-chart__vote"><b>260</b> Голосов</p>
                         <ul class="pie-chart__label-list">
-                          <li class="pie-chart__label-item  pie-chart__label-item--yellow">Великолепно</li>
-                          <li class="pie-chart__label-item  pie-chart__label-item--green">Хорошо</li>
-                          <li class="pie-chart__label-item  pie-chart__label-item--purple"> Удовлетворительно</li>
+                          <li class="pie-chart__label-item  pie-chart__label-item_yellow">Великолепно</li>
+                          <li class="pie-chart__label-item  pie-chart__label-item_green">Хорошо</li>
+                          <li class="pie-chart__label-item  pie-chart__label-item_purple"> Удовлетворительно</li>
                           <li class="pie-chart__label-item">Разочарован</li>
                         </ul>
                       </div>
                     </section>
                   </div>
                   <section class="room-details__reviews">
-                    <h2 class="room-details__title  room-details__title--low-mb">Отзывы посетителей номера <span class="room-details__title-alt">2 отзыва</span></h2>
+                    <h2 class="room-details__title  room-details__title_low-mb">Отзывы посетителей номера <span class="room-details__title-alt">2 отзыва</span></h2>
                     <div class="comment">
                       <div class="comment__wrap">
                         <div class="comment__pict"><img src="img/murad-5e1e291.png" alt="Мурад Сарафанов"/></div>
                         <div class="likebtn">
-                          <p class="likebtn__item  likebtn__item--active">
+                          <p class="likebtn__item  likebtn__item_active">
                             <button type="button">12</button>
                           </p>
                         </div>
@@ -173,7 +173,7 @@
                   </section>
                   <div class="room-details__column">
                     <div class="bullet">
-                      <p class="bullet__title  bullet__title--lp">Правила</p>
+                      <p class="bullet__title  bullet__title_lp">Правила</p>
                       <ul class="bullet__list">
                         <li class="bullet__item">Нельзя с питомцами</li>
                         <li class="bullet__item">Без вечеринок и мероприятий</li>
@@ -195,34 +195,34 @@
                       <p class="total-card__per-day"><b>9 990₽</b> в сутки</p>
                     </div>
                     <div class="total-card__date-inputs">
-                      <div class="input-group  input-group--column">
-                        <label class="input-group__label  input-group__label--big" for="arrival-total-input">Прибытие</label>
+                      <div class="input-group  input-group_with-label">
+                        <label class="input-group__label  input-group__label_big" for="arrival-total-input">Прибытие</label>
                         <p class="input-group__split">
-                          <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-total-input" placeholder="ДД.ММ.ГГГГ"/>
-                          <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
+                          <input class="input-group__input  input-group__input_double-button  input-group__input_dark-placeholder" id="arrival-total-input" placeholder="ДД.ММ.ГГГГ"/>
+                          <button class="input-group__button-split  input-group__button-split_down-animation" id="arrival-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                         </p>
                       </div>
-                      <div class="input-group  input-group--column">
-                        <label class="input-group__label  input-group__label--big" for="departure-total-input">Выезд</label>
+                      <div class="input-group  input-group_with-label">
+                        <label class="input-group__label  input-group__label_big" for="departure-total-input">Выезд</label>
                         <p class="input-group__split">
-                          <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-total-input" placeholder="ДД.ММ.ГГГГ"/>
-                          <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
+                          <input class="input-group__input  input-group__input_double-button  input-group__input_dark-placeholder" id="departure-total-input" placeholder="ДД.ММ.ГГГГ"/>
+                          <button class="input-group__button-split  input-group__button-split_down-animation" id="departure-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                         </p>
                       </div>
                       <div class="date-picker-container" id="date-picker-total-container"></div>
                     </div>
-                    <div class="input-group  input-group--column">
-                      <p class="input-group__label  input-group__label--big" id="for-number-total-guests-input">Гости</p>
-                      <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-total-guests-input">3 гостя</div>
+                    <div class="input-group  input-group_with-label">
+                      <p class="input-group__label  input-group__label_big" id="for-number-total-guests-input">Гости</p>
+                      <div class="input-group__input  input-group__input_fake  input-group__input_with-icon  input-group__button-split_down-animation" id="number-total-guests-input">3 гостя</div>
                     </div>
                     <div class="drop-down-container" id="drop-down-total-container"></div>
                     <div class="total-card__calc">
                       <div class="total-card__calc-row">
                         <p class="total-card__calc-text">9 990₽ х 4 суток</p>
-                        <p class="total-card__calc-text  total-card__calc-text--info">Сбор за услуги: скидка 2 179₽</p>
-                        <p class="total-card__calc-text  total-card__calc-text--info">Сбор за дополнительные услуги</p>
+                        <p class="total-card__calc-text  total-card__calc-text__informational">Сбор за услуги: скидка 2 179₽</p>
+                        <p class="total-card__calc-text  total-card__calc-text__informational">Сбор за дополнительные услуги</p>
                       </div>
-                      <div class="total-card__calc-row  total-card__calc-row--low  total-card__calc-row--tar">
+                      <div class="total-card__calc-row  total-card__calc-row_low   total-card__calc-row_tar">
                         <p class="total-card__calc-text">39 960₽</p>
                         <p class="total-card__calc-text">0₽</p>
                         <p class="total-card__calc-text">300₽</p>
@@ -233,7 +233,7 @@
                       <div class="total-card__total-separator"></div>
                       <p class="total-card__total-price">38 081₽</p>
                     </div>
-                    <button class="button  button--icon" type="submit">Забронировать</button>
+                    <button class="button  button_with-icon" type="submit">Забронировать</button>
                   </form>
                 </div>
               </section>
@@ -241,11 +241,11 @@
           </div>
         </main>
       </div>
-      <footer class="page-footer  page-footer--border-top">
+      <footer class="page-footer  page-footer_with-border-top">
         <div class="container">
           <div class="page-footer__wrap">
             <div class="page-footer__content">
-              <div class="page-footer__col  page-footer__col--large">
+              <div class="page-footer__col  page-footer__col_large">
                 <div class="logo"><a class="logo__link" href="/">
                     <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <g display="block"> 
@@ -320,7 +320,7 @@
                     </div>
                   </section>
                 </div>
-                <div class="page-footer__col  page-footer__col--large">
+                <div class="page-footer__col  page-footer__col_large">
                   <section class="text-content">
                     <div class="text-content__wrap">
                       <h2 class="text-content__title">Подписка</h2>
@@ -330,8 +330,8 @@
                   <form action="/404.html">
                     <div class="input-group">
                       <p class="input-group__split">
-                        <input class="input-group__input  input-group__input--button-split" id="input-id" type="email" placeholder="Email"/>
-                        <button class="input-group__button-split  input-group__button-split--right-animation" id="footer-email-split-id" type="submit"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
+                        <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Email"/>
+                        <button class="input-group__button-split  input-group__button-split_right-animation" id="footer-email-split-id" type="submit"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
                       </p>
                     </div>
                   </form>
