--- a/cards.html
+++ b/cards.html
@@ -16,7 +16,7 @@
     <title>Toxin - карточки</title>
   </head>
   <body class="cards-page">
-    <div class="logo logo--big">
+    <div class="logo logo_big">
       <div class="logo__big-pict"></div>
     </div>
     <div class="container">
@@ -29,29 +29,29 @@
                   <fieldset>
                     <legend class="date-wishes__title">Найдём номера под ваши пожелания</legend>
                     <div class="date-wishes__group">
-                      <div class="input-group  input-group--column">
+                      <div class="input-group  input-group_with-label">
                         <label class="input-group__label" for="arrival-input">Прибытие</label>
                         <p class="input-group__split">
-                          <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-input" placeholder="ДД.ММ.ГГГГ"/>
-                          <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
+                          <input class="input-group__input  input-group__input_double-button  input-group__input_dark-placeholder" id="arrival-input" placeholder="ДД.ММ.ГГГГ"/>
+                          <button class="input-group__button-split  input-group__button-split_down-animation" id="arrival-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                         </p>
                       </div>
-                      <div class="input-group  input-group--column">
+                      <div class="input-group  input-group_with-label">
                         <label class="input-group__label" for="departure-input">Выезд</label>
                         <p class="input-group__split">
-                          <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-input" placeholder="ДД.ММ.ГГГГ"/>
-                          <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
+                          <input class="input-group__input  input-group__input_double-button  input-group__input_dark-placeholder" id="departure-input" placeholder="ДД.ММ.ГГГГ"/>
+                          <button class="input-group__button-split  input-group__button-split_down-animation" id="departure-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                         </p>
                       </div>
                       <div class="date-picker-container" id="date-picker-container"></div>
                     </div>
-                    <div class="input-group  input-group--column">
+                    <div class="input-group  input-group_with-label">
                       <p class="input-group__label" id="for-number-guests-input">Гости</p>
-                      <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-guests-input">Сколько гостей</div>
+                      <div class="input-group__input  input-group__input_fake  input-group__input_with-icon  input-group__button-split_down-animation" id="number-guests-input">Сколько гостей</div>
                     </div>
                     <div class="drop-down-container" id="drop-down-container"></div>
                   </fieldset>
-                  <button class="button  button--icon" type="submit">Подобрать номер</button>
+                  <button class="button  button_with-icon" type="submit">Подобрать номер</button>
                 </form>
               </div>
             </section>
@@ -100,10 +100,10 @@
                       </p>
                     </div>
                   </fieldset>
-                  <button class="button  button--icon" type="submit">Перейти к оплате</button>
+                  <button class="button  button_with-icon" type="submit">Перейти к оплате</button>
                 </form>
                 <div class="register-card__account-enter">
-                  <p>Уже есть аккаунт на Toxin</p><a class="button  button--empty-style" href="/auth.html">Войти</a>
+                  <p>Уже есть аккаунт на Toxin</p><a class="button  button_empty" href="/auth.html">Войти</a>
                 </div>
               </div>
             </div>
@@ -119,34 +119,34 @@
                     <p class="total-card__per-day"><b>9 990₽</b> в сутки</p>
                   </div>
                   <div class="total-card__date-inputs">
-                    <div class="input-group  input-group--column">
-                      <label class="input-group__label  input-group__label--big" for="arrival-total-input">Прибытие</label>
+                    <div class="input-group  input-group_with-label">
+                      <label class="input-group__label  input-group__label_big" for="arrival-total-input">Прибытие</label>
                       <p class="input-group__split">
-                        <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-total-input" placeholder="19.08.2019"/>
-                        <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
+                        <input class="input-group__input  input-group__input_double-button  input-group__input_dark-placeholder" id="arrival-total-input" placeholder="19.08.2019"/>
+                        <button class="input-group__button-split  input-group__button-split_down-animation" id="arrival-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                       </p>
                     </div>
-                    <div class="input-group  input-group--column">
-                      <label class="input-group__label  input-group__label--big" for="departure-total-input">Выезд</label>
+                    <div class="input-group  input-group_with-label">
+                      <label class="input-group__label  input-group__label_big" for="departure-total-input">Выезд</label>
                       <p class="input-group__split">
-                        <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-total-input" placeholder="23.08.2019"/>
-                        <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
+                        <input class="input-group__input  input-group__input_double-button  input-group__input_dark-placeholder" id="departure-total-input" placeholder="23.08.2019"/>
+                        <button class="input-group__button-split  input-group__button-split_down-animation" id="departure-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                       </p>
                     </div>
                     <div class="date-picker-container" id="date-picker-total-container"></div>
                   </div>
-                  <div class="input-group  input-group--column">
-                    <p class="input-group__label  input-group__label--big" id="for-number-total-guests-input">Гости</p>
-                    <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-total-guests-input">3 гостя</div>
+                  <div class="input-group  input-group_with-label">
+                    <p class="input-group__label  input-group__label_big" id="for-number-total-guests-input">Гости</p>
+                    <div class="input-group__input  input-group__input_fake  input-group__input_with-icon  input-group__button-split_down-animation" id="number-total-guests-input">3 гостя</div>
                   </div>
                   <div class="drop-down-container" id="drop-down-total-container"></div>
                   <div class="total-card__calc">
                     <div class="total-card__calc-row">
                       <p class="total-card__calc-text">9 990₽ х 4 суток</p>
-                      <p class="total-card__calc-text  total-card__calc-text--info">Сбор за услуги: скидка 2 179₽</p>
-                      <p class="total-card__calc-text  total-card__calc-text--info">Сбор за дополнительные услуги</p>
+                      <p class="total-card__calc-text  total-card__calc-text__informational">Сбор за услуги: скидка 2 179₽</p>
+                      <p class="total-card__calc-text  total-card__calc-text__informational">Сбор за дополнительные услуги</p>
                     </div>
-                    <div class="total-card__calc-row  total-card__calc-row--low  total-card__calc-row--tar">
+                    <div class="total-card__calc-row  total-card__calc-row_low   total-card__calc-row_tar">
                       <p class="total-card__calc-text">39 960₽</p>
                       <p class="total-card__calc-text">0₽</p>
                       <p class="total-card__calc-text">300₽</p>
@@ -157,7 +157,7 @@
                     <div class="total-card__total-separator"></div>
                     <p class="total-card__total-price">38 081₽</p>
                   </div>
-                  <button class="button  button--icon" type="submit">Забронировать</button>
+                  <button class="button  button_with-icon" type="submit">Забронировать</button>
                 </form>
               </div>
             </section>
@@ -175,10 +175,10 @@
                       <input class="input-group__input" id="pass2" type="password" placeholder="Пароль"/>
                     </div>
                   </fieldset>
-                  <button class="button  button--icon" type="submit">Войти</button>
+                  <button class="button  button_with-icon" type="submit">Войти</button>
                 </form>
                 <div class="auth-card__account-enter">
-                  <p>Нет аккаунта на Toxin?</p><a class="button  button--empty-style" href="/registration.html">Создать</a>
+                  <p>Нет аккаунта на Toxin?</p><a class="button  button_empty" href="/registration.html">Создать</a>
                 </div>
               </div>
             </div>
@@ -187,12 +187,12 @@
         <div class="cards-page__row">
           <div class="cards-page__item">
             <div class="card-page__stub-card">
-              <section class="date-picker  date-picker--show">
+              <section class="date-picker  date-picker_opened">
                 <div class="date-picker__wrap">
                   <div class="date-picker__control">
-                    <button class="date-picker__slider-btn  date-picker__slider-btn--prev" type="button"></button>
+                    <button class="date-picker__slider-btn  date-picker__slider-btn_prev" type="button"></button>
                     <h2 class="date-picker__title" id="date-picker-main-title">Август 2019</h2>
-                    <button class="date-picker__slider-btn date-picker__slider-btn--next" type="button"></button>
+                    <button class="date-picker__slider-btn date-picker__slider-btn_next" type="button"></button>
                   </div>
                   <table class="date-picker__calendar">
                     <thead>
@@ -208,9 +208,9 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <td class="date-picker__day  date-picker__day--not-current">29</td>
-                        <td class="date-picker__day  date-picker__day--not-current">30</td>
-                        <td class="date-picker__day  date-picker__day--not-current">31</td>
+                        <td class="date-picker__day  date-picker__day_not-current">29</td>
+                        <td class="date-picker__day  date-picker__day_not-current">30</td>
+                        <td class="date-picker__day  date-picker__day_not-current">31</td>
                         <td class="date-picker__day">1</td>
                         <td class="date-picker__day">2</td>
                         <td class="date-picker__day">3</td>
@@ -220,7 +220,7 @@
                         <td class="date-picker__day">5</td>
                         <td class="date-picker__day">6</td>
                         <td class="date-picker__day">7</td>
-                        <td class="date-picker__day  date-picker__day--current">8</td>
+                        <td class="date-picker__day  date-picker__day_current">8</td>
                         <td class="date-picker__day">9</td>
                         <td class="date-picker__day">10</td>
                         <td class="date-picker__day">11</td>
@@ -235,11 +235,11 @@
                         <td class="date-picker__day">18</td>
                       </tr>
                       <tr>
-                        <td class="date-picker__day  date-picker__day--select-start  date-picker__day--select">19</td>
-                        <td class="date-picker__day  date-picker__day--select-space">20</td>
-                        <td class="date-picker__day  date-picker__day--select-space">21</td>
-                        <td class="date-picker__day  date-picker__day--select-space">22</td>
-                        <td class="date-picker__day  date-picker__day--select-end  date-picker__day--select">23</td>
+                        <td class="date-picker__day  date-picker__day_selected-start  date-picker__day_selected">19</td>
+                        <td class="date-picker__day  date-picker__day_selected-space">20</td>
+                        <td class="date-picker__day  date-picker__day_selected-space">21</td>
+                        <td class="date-picker__day  date-picker__day_selected-space">22</td>
+                        <td class="date-picker__day  date-picker__day_selected-end  date-picker__day_selected">23</td>
                         <td class="date-picker__day">24</td>
                         <td class="date-picker__day">25</td>
                       </tr>
@@ -250,13 +250,13 @@
                         <td class="date-picker__day">29</td>
                         <td class="date-picker__day">30</td>
                         <td class="date-picker__day">31</td>
-                        <td class="date-picker__day  date-picker__day--not-current">1</td>
+                        <td class="date-picker__day  date-picker__day_not-current">1</td>
                       </tr>
                     </tbody>
                   </table>
                   <div class="date-picker__control">
                     <button class="date-picker__button" type="button">Очистить</button>
-                    <button class="date-picker__button date-picker__button--accent" type="button">Применить</button>
+                    <button class="date-picker__button date-picker__button_accentuating" type="button">Применить</button>
                   </div>
                 </div>
               </section>
@@ -273,8 +273,8 @@
                     <li class="glide__slide"><img src="img/one-hotel-edc48d5.png" alt="Красивый отель"/></li>
                   </ul>
                   <div class="glide__arrows" data-glide-el="controls">
-                    <button class="glide__arrow  glide__arrow--left  hotel-card__slider-btn" data-glide-dir="&lt;" type="button">Назад</button>
-                    <button class="glide__arrow  glide__arrow--right  hotel-card__slider-btn  hotel-card__slider-btn--next" data-glide-dir="&gt;" type="button">Вперед</button>
+                    <button class="glide__arrow  glide__arrow_left  hotel-card__slider-btn" data-glide-dir="&lt;" type="button">Назад</button>
+                    <button class="glide__arrow  glide__arrow_right  hotel-card__slider-btn  hotel-card__slider-btn_next" data-glide-dir="&gt;" type="button">Вперед</button>
                   </div>
                   <div class="hotel-card__bullets  glide__bullets" data-glide-el="controls[nav]">
                     <button class="glide__bullet" data-glide-dir="=0" type="button"></button>
@@ -305,7 +305,7 @@
                         </div>
                       </div>
                     </div>
-                    <p class="hotel-card__text  hotel-card__text--fzlarge"><b>145</b> Отзывов</p>
+                    <p class="hotel-card__text  hotel-card__text_fzlarge"><b>145</b> Отзывов</p>
                   </div>
                 </div>
               </div>
@@ -320,8 +320,8 @@
                     <li class="glide__slide"><img src="img/double-hotel-031f23b.png" alt="Красивый отель"/></li>
                   </ul>
                   <div class="glide__arrows" data-glide-el="controls">
-                    <button class="glide__arrow  glide__arrow--left  hotel-card__slider-btn" data-glide-dir="&lt;" type="button">Назад</button>
-                    <button class="glide__arrow  glide__arrow--right  hotel-card__slider-btn  hotel-card__slider-btn--next" data-glide-dir="&gt;" type="button">Вперед</button>
+                    <button class="glide__arrow  glide__arrow_left  hotel-card__slider-btn" data-glide-dir="&lt;" type="button">Назад</button>
+                    <button class="glide__arrow  glide__arrow_right  hotel-card__slider-btn  hotel-card__slider-btn_next" data-glide-dir="&gt;" type="button">Вперед</button>
                   </div>
                   <div class="hotel-card__bullets  glide__bullets" data-glide-el="controls[nav]">
                     <button class="glide__bullet" data-glide-dir="=0" type="button"></button>
@@ -352,7 +352,7 @@
                         </div>
                       </div>
                     </div>
-                    <p class="hotel-card__text  hotel-card__text--fzlarge"><b>65</b> Отзывов</p>
+                    <p class="hotel-card__text  hotel-card__text_fzlarge"><b>65</b> Отзывов</p>
                   </div>
                 </div>
               </div>
