--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <ul class="main-menu__list">
                     <li class="main-menu__item"><a href="/404.html">О нас</a>
                     </li>
-                    <li class="main-menu__item  main-menu__item--sub-menu"><a href="/404.html">Услуги</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a href="/404.html">Услуги</a>
                       <ul class="main-menu__sub-menu">
                         <li class="main-menu__sub-item"><a href="/404.html">Подбор отелей</a></li>
                         <li class="main-menu__sub-item"><a href="/404.html">Заказать трансфер</a></li>
@@ -67,7 +67,7 @@
                     </li>
                     <li class="main-menu__item"><a href="/404.html">Новости</a>
                     </li>
-                    <li class="main-menu__item  main-menu__item--sub-menu"><a href="/404.html">Соглашения</a>
+                    <li class="main-menu__item  main-menu__item_sub-menu"><a href="/404.html">Соглашения</a>
                       <ul class="main-menu__sub-menu">
                         <li class="main-menu__sub-item"><a href="/404.html">Пользовательские</a></li>
                         <li class="main-menu__sub-item"><a href="/404.html">Международные</a></li>
@@ -76,7 +76,7 @@
                   </ul>
                 </nav>
               </div>
-              <section class="page-header__auth"><a class="button  button--empty-style" href="/auth.html">Войти</a><a class="button" href="/registration.html">Зарегистрироваться</a>
+              <section class="page-header__auth"><a class="button  button_empty" href="/auth.html">Войти</a><a class="button" href="/registration.html">Зарегистрироваться</a>
                 <ul class="page-header__auth-list" id="authListId">
                   <li class="page-header__auth-item"><a href="/auth.html">Войти</a></li>
                   <li class="page-header__auth-item"><a href="/registration.html">Зарегистрироваться</a></li>
@@ -96,29 +96,29 @@
                       <fieldset>
                         <legend class="date-wishes__title">Найдём номера под ваши пожелания</legend>
                         <div class="date-wishes__group">
-                          <div class="input-group  input-group--column">
+                          <div class="input-group  input-group_with-label">
                             <label class="input-group__label" for="arrival-input">Прибытие</label>
                             <p class="input-group__split">
-                              <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-input" placeholder="ДД.ММ.ГГГГ"/>
-                              <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
+                              <input class="input-group__input  input-group__input_double-button  input-group__input_dark-placeholder" id="arrival-input" placeholder="ДД.ММ.ГГГГ"/>
+                              <button class="input-group__button-split  input-group__button-split_down-animation" id="arrival-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                             </p>
                           </div>
-                          <div class="input-group  input-group--column">
+                          <div class="input-group  input-group_with-label">
                             <label class="input-group__label" for="departure-input">Выезд</label>
                             <p class="input-group__split">
-                              <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-input" placeholder="ДД.ММ.ГГГГ"/>
-                              <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
+                              <input class="input-group__input  input-group__input_double-button  input-group__input_dark-placeholder" id="departure-input" placeholder="ДД.ММ.ГГГГ"/>
+                              <button class="input-group__button-split  input-group__button-split_down-animation" id="departure-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                             </p>
                           </div>
                           <div class="date-picker-container" id="date-picker-container"></div>
                         </div>
-                        <div class="input-group  input-group--column">
+                        <div class="input-group  input-group_with-label">
                           <p class="input-group__label" id="for-number-guests-input">Гости</p>
-                          <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-guests-input">Сколько гостей</div>
+                          <div class="input-group__input  input-group__input_fake  input-group__input_with-icon  input-group__button-split_down-animation" id="number-guests-input">Сколько гостей</div>
                         </div>
                         <div class="drop-down-container" id="drop-down-container"></div>
                       </fieldset>
-                      <button class="button  button--icon" type="submit">Подобрать номер</button>
+                      <button class="button  button_with-icon" type="submit">Подобрать номер</button>
                     </form>
                   </div>
                 </section>
@@ -134,7 +134,7 @@
         <div class="container">
           <div class="page-footer__wrap">
             <div class="page-footer__content">
-              <div class="page-footer__col  page-footer__col--large">
+              <div class="page-footer__col  page-footer__col_large">
                 <div class="logo"><a class="logo__link" href="/">
                     <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <g display="block"> 
@@ -209,7 +209,7 @@
                     </div>
                   </section>
                 </div>
-                <div class="page-footer__col  page-footer__col--large">
+                <div class="page-footer__col  page-footer__col_large">
                   <section class="text-content">
                     <div class="text-content__wrap">
                       <h2 class="text-content__title">Подписка</h2>
@@ -219,8 +219,8 @@
                   <form action="/404.html">
                     <div class="input-group">
                       <p class="input-group__split">
-                        <input class="input-group__input  input-group__input--button-split" id="input-id" type="email" placeholder="Email"/>
-                        <button class="input-group__button-split  input-group__button-split--right-animation" id="footer-email-split-id" type="submit"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
+                        <input class="input-group__input  input-group__input_double-button" id="input-id" type="email" placeholder="Email"/>
+                        <button class="input-group__button-split  input-group__button-split_right-animation" id="footer-email-split-id" type="submit"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
                       </p>
                     </div>
                   </form>
